src/index.css
/* ... */
#target-swatch .tooltiptext {
  font-size: 1rem;
  font-weight: 500;
  visibility: hidden;
  width: 120px;
  background-color: #efefef;
  color: #333;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  left: 30px;
  z-index: 1;
  transition: background .5s;
}

#target-swatch:hover .tooltiptext {
  visibility: visible;
}

section#left-and-right-field {
  box-sizing: border-box;
  justify-content: center;
  margin: 0 auto;
  height: 13rem;
}

.field   {
  box-sizing: border-box;
  border: 3px solid #abb2b9;
  width: 14rem;
  height: 14rem;
  /* mix-blend-mode ensures the colors blend properly */
  mix-blend-mode: multiply;
  border-radius: 50%;
  margin: 0 auto;
  transition: background .10s;
}

#left-field   {
  transform: translate(-38%, -8%);
}

#right-field  {
  transform: translate(38%, -108%);
}

#color-bubble-tray {
  box-sizing: border-box;
  margin-right: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-flow: wrap;
}

.bubble {
  width: 75px;
  height: 75px;
  border: 3px solid  #abb2b9;
  text-align: center;
  border-radius: 50%;
  transition: border .1s;
}

.bubble:hover {
  border: 3px solid #74808b;
  cursor: pointer;
}

/*Revealing the solution animation*/
@keyframes fadein {
  from {opacity:0} to {opacity:1}
}

/*=======================*/
/* footer */
/*=======================*/
footer {
  box-sizing: border-box;
  width: 100%;
  border-top: 5px solid var(--accent-gray-light, #ccc);
  padding-top: .5rem;
  display: flex;
  justify-content: space-between;
}

.byline {
  display: flex;
}

.footer-link {
  /* centers links vertically within footer */
  display: flex;
  justify-content: center;
  flex-direction: column;
  position: relative;
  bottom: 0;
  margin-right: 5px;
  color: var(--accent-gray-darkest, #333);
  font-size: .75rem;
  font-weight: 500;
  text-decoration: none;
}

.footer-link:hover {
  color: var(--accent-gray-darker, #666);
}

.fa-github {
  font-size: 1.3rem;
}

.audio-button {
  widows: 102px;
}
/*=======================*/
/* game over */
/*=======================*/
#game-over-container {
  /*text-align: center;*/
/*  position: absolute;
  top: 31%;
  left: 37%;
  justify-content: center;
  z-index: 2;
  height: 190px;
  width: 190px;
  border-radius: 100px;
  margin: 0 auto;
  background: rgba(232, 232, 232, .7);
  border: 3px solid #abb2b9;
  display: flex;
  flex-direction: column;*/
}

#game-over-container {
  height: 190px;
  width: 190px;
  border-radius: 100px;
  z-index: 2;
  background: rgba(232, 232, 232, .7);
  border: 3px solid #abb2b9;
  display: flex;
  flex-direction: column;
  justify-content: center;

  position: fixed;
  top: 50%;
  left: 50%;
  /* bring your own prefixes */
  transform: translate(-50%, -50%);
}



#game-over,
#game-over-score {
  display: inline-block;
  position: relative;
  margin: 0 auto;
  font-size: 1.5rem;
}

#game-over-score {
  font-size: 1.15rem;
}

.pop-in {
 -webkit-animation:pop-in .5s;
 -moz-animation:pop-in .5s;
 -ms-animation:pop-in .5s;
 animation: pop-in .5s;
}

@-webkit-keyframes pop-in {
0% {
  opacity: 0;
  -webkit-transform: scale(0.5);
}
100% {
  opacity: 1;
  -webkit-transform: scale(1);
}
}

@-moz-keyframes pop-in {
0% {
  opacity: 0;
  -moz-transform: scale(0.5);
}
100% {
  opacity: 1;
  -moz-transform: scale(1);
}
}
@keyframes pop-in {
0% {
  opacity: 0;
  transform: scale(0.5);
   }
100% {
  opacity: 1;
  transform: scale(1);
}
}

.pop-out {
 -webkit-animation:pop-out .5s;
 -moz-animation:pop-out .5s;
 -ms-animation:pop-out .5s;
 animation: pop-out .5s;
}

@-webkit-keyframes pop-out {
0% {
  opacity: 1;
  -webkit-transform: scale(1);
}
100% {
  opacity: 0;
  -webkit-transform: scale(0.5);
}
}

@-moz-keyframes pop-out {
0% {
  opacity: 1;
  -moz-transform: scale(1);
}
100% {
  opacity: 0;
  -moz-transform: scale(0.5);
}
}
@keyframes pop-out {
0% {
  opacity: 1;
  transform: scale(1);
   }
100% {
  opacity: 0;
  transform: scale(0.5);
}
}



/*=======================*/
/* leaderboard */
/*=======================*/
#leaderboard-component {
  opacity: 0;
  position: inherit;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-direction: column;
  font-family: 'Alata', sans-serif;
  font-size: 1.1rem;
}

.leaderboard-title {
  text-align: center;
}

ul.leaderboard-list {
  margin: 0 auto;
  width: 50%;
  min-width: 180px;
  max-width: 300px;
  display: block;
  margin-block-start: 1rem;
  margin-block-end: .75rem;
  padding-inline-start: 0;
}

.leaderboard-entry {
  display: flex;
  justify-content: space-between;
}
.player-rank {
  margin-right: 1rem;
}

.player-name {
  display: inline-block;
}

.player-score {
  display: inline-block;
  margin-left: 1rem;
}

.lederboard-form-placeholder {
  display: flex;
  /*min-height: 2rem;*/
  width: 100%;
  max-width: 600px;
}

.leaderboard-form {
  margin: 0 auto;
}

input.leaderboard-input-field {
  margin-right: 10px;
  border: 2px solid var(--accent-gray, #a6a6a6);
  height: 2rem;
  width: 10.25rem;
  padding: 6px;
  font-family: 'Alata', sans-serif;
  /*background-color: red;*/
}

.leaderboard-form-button {
  display: inline-block;
}

.react-spinner {
  margin-left: .5rem;
}




/* ************************************************************************* */
/* ************************************************************************* */
/* ************************************************************************* */
/* ************************************************************************* */
/* ************************************************************************* */
/*=======================*/
/* tablets : */
/*=======================*/
@media only screen and (max-width: 785px) {


  .twohue {
    max-width: 490px;
  }

  #game-over-container {
/*    top: 30%;
    left: 151px;*/
  }


}
/* ... */

